objects/Resource__c/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <label>Agency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>