objects/Resource__c/fields/AL_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>AL_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AL HW Permit</label>
    <type>Checkbox</type>
</CustomField>