objects/Resource__c/fields/Allow_Manual_Unit_Cost_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Allow_Manual_Unit_Cost_Adjustment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Manual Unit Cost Adjustment</label>
    <type>Checkbox</type>
</CustomField>