objects/Resource__c/fields/Allow_Negative_Quantity_Values__c.field-meta.xml
<CustomField>
    <fullName>Allow_Negative_Quantity_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Negative Quantity Values</label>
    <type>Checkbox</type>
</CustomField>