objects/Resource__c/fields/Allow_Zero_Unit_Cost_at_TM_Confirmation__c.field-meta.xml
<CustomField>
    <fullName>Allow_Zero_Unit_Cost_at_TM_Confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Zero Unit Cost at T&amp;M Confirmation</label>
    <type>Checkbox</type>
</CustomField>