objects/Resource__c/fields/AR_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>AR_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AR HW Permit</label>
    <type>Checkbox</type>
</CustomField>