objects/Resource__c/fields/Axles__c.field-meta.xml
<CustomField>
    <fullName>Axles__c</fullName>
    <label>Axles</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>