objects/Resource__c/fields/Business_Phone_2__c.field-meta.xml
<CustomField>
    <fullName>Business_Phone_2__c</fullName>
    <label>Business Phone 2</label>
    <type>Phone</type>
</CustomField>