objects/Resource__c/fields/Bypass_Time_Overlap_Checking__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Time_Overlap_Checking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bypass Time Overlap Checking</label>
    <type>Checkbox</type>
</CustomField>