objects/Resource__c/fields/Comdata_Card_Acknowledgement_Form__c.field-meta.xml
<CustomField>
    <fullName>Comdata_Card_Acknowledgement_Form__c</fullName>
    <label>Comdata Card Acknowledgement Form</label>
    <type>Date</type>
</CustomField>