objects/Resource__c/fields/Comdata_Card_Issued__c.field-meta.xml
<CustomField>
    <fullName>Comdata_Card_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comdata Card Issued</label>
    <type>Checkbox</type>
</CustomField>