objects/Resource__c/fields/Coupa_Lookup_Value_Id__c.field-meta.xml
<CustomField>
    <fullName>Coupa_Lookup_Value_Id__c</fullName>
    <label>Coupa Lookup Value Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>