objects/Resource__c/fields/CT_Amber_Light__c.field-meta.xml
<CustomField>
    <fullName>CT_Amber_Light__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CT Amber Light</label>
    <type>Checkbox</type>
</CustomField>