objects/Resource__c/fields/CT_BioMed__c.field-meta.xml
<CustomField>
    <fullName>CT_BioMed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CT BioMed</label>
    <type>Checkbox</type>
</CustomField>