objects/Resource__c/fields/CT_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>CT_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CT HW Permit</label>
    <type>Checkbox</type>
</CustomField>