objects/Resource__c/fields/Date_Sold__c.field-meta.xml
<CustomField>
    <fullName>Date_Sold__c</fullName>
    <formula>IF(TEXT(Category__c) == 'Equipment', End_Date__c, null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Sold</label>
    <type>Date</type>
</CustomField>