objects/Resource__c/fields/DE_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>DE_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DE HW Permit</label>
    <type>Checkbox</type>
</CustomField>