objects/Resource__c/fields/DE_Nonhaz_Liquid__c.field-meta.xml
<CustomField>
    <fullName>DE_Nonhaz_Liquid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DE Nonhaz Liquid</label>
    <type>Checkbox</type>
</CustomField>