objects/Resource__c/fields/DE_SW_Permit__c.field-meta.xml
<CustomField>
    <fullName>DE_SW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DE SW Permit</label>
    <type>Checkbox</type>
</CustomField>