objects/Resource__c/fields/Delcora__c.field-meta.xml
<CustomField>
    <fullName>Delcora__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delcora</label>
    <type>Checkbox</type>
</CustomField>