objects/Resource__c/fields/Designated_Vehicle_Policy_Consent_Form__c.field-meta.xml
<CustomField>
    <fullName>Designated_Vehicle_Policy_Consent_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Designated Vehicle Policy Consent Form</label>
    <type>Checkbox</type>
</CustomField>