objects/Resource__c/fields/Division_No__c.field-meta.xml
<CustomField>
    <fullName>Division_No__c</fullName>
    <formula>Service_Center__r.RSG_Division_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RSG Division No.</label>
    <type>Text</type>
</CustomField>