objects/Resource__c/fields/DMV_Pin__c.field-meta.xml
<CustomField>
    <fullName>DMV_Pin__c</fullName>
    <label>DMV Pin</label>
    <length>20</length>
    <type>Text</type>
</CustomField>