objects/Resource__c/fields/DOT_Spec__c.field-meta.xml
<CustomField>
    <fullName>DOT_Spec__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DOT Spec</label>
    <type>Checkbox</type>
</CustomField>