objects/Resource__c/fields/Employee_Code__c.field-meta.xml
<CustomField>
    <fullName>Employee_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Code</label>
    <referenceTo>Job_Position__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>Resources</relationshipName>
    <type>Lookup</type>
</CustomField>