objects/Resource__c/fields/Employee_No__c.field-meta.xml
<CustomField>
    <fullName>Employee_No__c</fullName>
    <label>Employee No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>