objects/Resource__c/fields/EQAI_Other__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checking this field should send the material as Other to EQAI</description>
    <label>EQAI Other</label>
    <type>Checkbox</type>
</CustomField>