objects/Resource__c/fields/Equip_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Equip_Prefix__c</fullName>
    <label>Equip Prefix</label>
    <length>250</length>
    <type>Text</type>
</CustomField>