objects/Resource__c/fields/Equipment_Permit_Database__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Permit_Database__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Equipment Permit Database</label>
    <type>Checkbox</type>
</CustomField>