objects/Resource__c/fields/Exclude_from_I_C_Cost_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_I_C_Cost_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from I/C Cost Calculation</label>
    <type>Checkbox</type>
</CustomField>