objects/Resource__c/fields/EZ_Pass_Account__c.field-meta.xml
<CustomField>
    <fullName>EZ_Pass_Account__c</fullName>
    <label>EZ Pass Account (Obsolete)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>