objects/Resource__c/fields/EZ_Pass_Code__c.field-meta.xml
<CustomField>
    <fullName>EZ_Pass_Code__c</fullName>
    <label>EZ Pass Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>72</fullName>
                <label>Automobile- 2 axles, 4 tires (up to 7,000 lbs)</label>
            </value>
            <value>
                <fullName>200</fullName>
                <label>Pick-Up Trucks- 2 axles, 4 tires (up to 7,000 lbs)</label>
            </value>
            <value>
                <fullName>201</fullName>
                <label>Pick-Up Trucks- 2 axles, 6 tires (up to 7,000 lbs)</label>
            </value>
            <value>
                <fullName>202</fullName>
                <label>Pick-Up Trucks- 2 axles, 4 tires (over 7,000 lbs)</label>
            </value>
            <value>
                <fullName>203</fullName>
                <label>Pick-Up Trucks- 2 axles, 6 tires (over 7,000 lbs)</label>
            </value>
            <value>
                <fullName>266</fullName>
                <label>Vans- 2 axles, 4 tires (over 7,000 lbs)</label>
            </value>
            <value>
                <fullName>523</fullName>
                <label>Trucks- 2 axles, 6 tires (over 7,000 lbs)</label>
            </value>
            <value>
                <fullName>527</fullName>
                <label>Trucks- 3 axles, 8 or 10 tires (over 7,000 lbs)</label>
            </value>
            <value>
                <fullName>531</fullName>
                <label>Trucks- 4 axles, 10 or more tires (over 7,000 lbs)</label>
            </value>
            <value>
                <fullName>535</fullName>
                <label>Trucks- 5 axles, 12 or more  tires (over 7,000 lbs)</label>
            </value>
            <value>
                <fullName>727</fullName>
                <label>Tractors- 5 axles (trailer &gt; or = to 48")</label>
            </value>
            <value>
                <fullName>207</fullName>
                <isActive>false</isActive>
                <label>207</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>