objects/Resource__c/fields/EZ_Pass_Tag_Date__c.field-meta.xml
<CustomField>
    <fullName>EZ_Pass_Tag_Date__c</fullName>
    <label>EZ Pass Tag Date (Obsolete)</label>
    <type>Date</type>
</CustomField>