objects/Resource__c/fields/EZ_Pass_Tag_Status__c.field-meta.xml
<CustomField>
    <fullName>EZ_Pass_Tag_Status__c</fullName>
    <label>EZ Pass Tag Status (Obsolete)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>