objects/Resource__c/fields/EZ_Pass_Tag_Type__c.field-meta.xml
<CustomField>
    <fullName>EZ_Pass_Tag_Type__c</fullName>
    <label>EZ Pass Tag Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Windshield Mount</fullName>
            </value>
            <value>
                <fullName>Roof Mount</fullName>
            </value>
            <value>
                <fullName>Bumper Mount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>