objects/Resource__c/fields/Falls_Decal__c.field-meta.xml
<CustomField>
    <fullName>Falls_Decal__c</fullName>
    <label>PA Falls Twp Decal #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>