objects/Resource__c/fields/Falls_Twp__c.field-meta.xml
<CustomField>
    <fullName>Falls_Twp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Falls Twp</label>
    <type>Checkbox</type>
</CustomField>