objects/Resource__c/fields/FL_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>FL_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FL HW Permit</label>
    <type>Checkbox</type>
</CustomField>