objects/Resource__c/fields/Fleet_Number__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Number__c</fullName>
    <label>Fleet Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>