objects/Resource__c/fields/FLSA__c.field-meta.xml
<CustomField>
    <fullName>FLSA__c</fullName>
    <label>FLSA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Non-Exempt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>