objects/Resource__c/fields/From_Permit_Database__c.field-meta.xml
<CustomField>
    <fullName>From_Permit_Database__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Permit Database</label>
    <type>Checkbox</type>
</CustomField>