objects/Resource__c/fields/GA_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>GA_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GA HW Permit</label>
    <type>Checkbox</type>
</CustomField>