objects/Resource__c/fields/GateWay__c.field-meta.xml
<CustomField>
    <fullName>GateWay__c</fullName>
    <label>GateWay</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>