objects/Resource__c/fields/Goal_hours__c.field-meta.xml
<CustomField>
    <fullName>Goal_hours__c</fullName>
    <label>Goal (hours)</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>