objects/Resource__c/fields/Gold_ER_Rate1__c.field-meta.xml
<CustomField>
    <fullName>Gold_ER_Rate1__c</fullName>
    <label>Gold ER Rate1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>