objects/Resource__c/fields/Gold_Rate3__c.field-meta.xml
<CustomField>
    <fullName>Gold_Rate3__c</fullName>
    <label>Gold Rate3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>