objects/Resource__c/fields/Gold_Rate4__c.field-meta.xml
<CustomField>
    <fullName>Gold_Rate4__c</fullName>
    <label>Gold Rate4</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>