objects/Resource__c/fields/GPS__c.field-meta.xml
<CustomField>
    <fullName>GPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GPS</label>
    <type>Checkbox</type>
</CustomField>