objects/Resource__c/fields/GVW__c.field-meta.xml
<CustomField>
    <fullName>GVW__c</fullName>
    <label>GVW DoNotUse</label>
    <length>30</length>
    <type>Text</type>
</CustomField>