objects/Resource__c/fields/GVWNumber__c.field-meta.xml
<CustomField>
    <fullName>GVWNumber__c</fullName>
    <label>GVW</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>