objects/Resource__c/fields/H_Mat_Cert__c.field-meta.xml
<CustomField>
    <fullName>H_Mat_Cert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HazMat Cert</label>
    <type>Checkbox</type>
</CustomField>