objects/Resource__c/fields/Has_Container__c.field-meta.xml
<CustomField>
    <fullName>Has_Container__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Container</label>
    <type>Checkbox</type>
</CustomField>