objects/Resource__c/fields/Has_Weight_Volume__c.field-meta.xml
<CustomField>
    <fullName>Has_Weight_Volume__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Weight/Volume</label>
    <type>Checkbox</type>
</CustomField>