objects/Resource__c/fields/HW_Decal__c.field-meta.xml
<CustomField>
    <fullName>HW_Decal__c</fullName>
    <label>HW Decal #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>