objects/Resource__c/fields/IA_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>IA_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IA HW Permit</label>
    <type>Checkbox</type>
</CustomField>