objects/Resource__c/fields/ID_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>ID_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ID HW Permit</label>
    <type>Checkbox</type>
</CustomField>