objects/Resource__c/fields/IFTA__c.field-meta.xml
<CustomField>
    <fullName>IFTA__c</fullName>
    <label>IFTA</label>
    <length>80</length>
    <type>Text</type>
</CustomField>