objects/Resource__c/fields/IL_Special_Permit__c.field-meta.xml
<CustomField>
    <fullName>IL_Special_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IL Special Permit</label>
    <type>Checkbox</type>
</CustomField>