objects/Resource__c/fields/IN_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>IN_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IN HW Permit</label>
    <type>Checkbox</type>
</CustomField>