objects/Resource__c/fields/Insurance__c.field-meta.xml
<CustomField>
    <fullName>Insurance__c</fullName>
    <label>Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Private Passenger</fullName>
            </value>
            <value>
                <fullName>Light Truck</fullName>
                <label>Light Truck - Trucks GVW &lt; 10,000 lbs</label>
            </value>
            <value>
                <fullName>Medium Truck</fullName>
                <label>Medium Truck - Trucks GVW: 10,001 - 20,000 lbs</label>
            </value>
            <value>
                <fullName>Heavy Truck</fullName>
                <label>Heavy Truck - Trucks GVW: 20,001 - 45,000 lbs</label>
            </value>
            <value>
                <fullName>Extra-Heavy Truck</fullName>
                <label>Extra-Heavy Truck - Trucks GVW: &gt; 45,000 lbs</label>
            </value>
            <value>
                <fullName>Extra-Heavy Truck Tractor</fullName>
                <label>Extra-Heavy Truck Tractor - Truck-Tractor GVW &gt;45,000 lbs</label>
            </value>
            <value>
                <fullName>Trailer</fullName>
                <label>Trailer - Any trailer with load capacity &gt; 2,000 lbs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>