objects/Resource__c/fields/IRP_Fee__c.field-meta.xml
<CustomField>
    <fullName>IRP_Fee__c</fullName>
    <label>Registration Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>