objects/Resource__c/fields/IRP_Fleet_Number__c.field-meta.xml
<CustomField>
    <fullName>IRP_Fleet_Number__c</fullName>
    <label>IRP Fleet Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>