objects/Resource__c/fields/IRP_Registration__c.field-meta.xml
<CustomField>
    <fullName>IRP_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IRP Registration</label>
    <type>Checkbox</type>
</CustomField>