objects/Resource__c/fields/Is_Administrator__c.field-meta.xml
<CustomField>
    <fullName>Is_Administrator__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Administrator</label>
    <type>Checkbox</type>
</CustomField>