objects/Resource__c/fields/Is_Temp__c.field-meta.xml
<CustomField>
    <fullName>Is_Temp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Temp</label>
    <type>Checkbox</type>
</CustomField>