objects/Resource__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <length>80</length>
    <type>Text</type>
</CustomField>