objects/Resource__c/fields/Kronos_Time_Punch_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Kronos_Time_Punch_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kronos Time Punch Enabled</label>
    <type>Checkbox</type>
</CustomField>