objects/Resource__c/fields/Kronos_Time_Punch_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Kronos_Time_Punch_Start_Date__c</fullName>
    <label>Kronos Time Punch Start Date</label>
    <type>Date</type>
</CustomField>