objects/Resource__c/fields/KS_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>KS_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KS HW Permit</label>
    <type>Checkbox</type>
</CustomField>