objects/Resource__c/fields/KY_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>KY_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KY HW Permit</label>
    <type>Checkbox</type>
</CustomField>