objects/Resource__c/fields/Last_30_Day_Sum_of_Hours__c.field-meta.xml
<CustomField>
    <fullName>Last_30_Day_Sum_of_Hours__c</fullName>
    <label>Last 30 Day Sum of Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>