objects/Resource__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baltimore</fullName>
            </value>
            <value>
                <fullName>Baltimore Ops</fullName>
            </value>
            <value>
                <fullName>Brooklyn</fullName>
            </value>
            <value>
                <fullName>Clayton Ops</fullName>
            </value>
            <value>
                <fullName>Northboro</fullName>
            </value>
            <value>
                <fullName>Norfolk</fullName>
            </value>
            <value>
                <fullName>Northern PA</fullName>
            </value>
            <value>
                <fullName>Pennsylvania</fullName>
            </value>
            <value>
                <fullName>Quantico</fullName>
            </value>
            <value>
                <fullName>Rahway</fullName>
            </value>
            <value>
                <fullName>Refurbished</fullName>
            </value>
            <value>
                <fullName>Transportation (CVI)</fullName>
            </value>
            <value>
                <fullName>TSDF- Lewisberry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>