objects/Resource__c/fields/LTD__c.field-meta.xml
<CustomField>
    <fullName>LTD__c</fullName>
    <inlineHelpText>ACV paid long term disability coverage</inlineHelpText>
    <label>LTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>