objects/Resource__c/fields/MA_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>MA_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MA HW Permit</label>
    <type>Checkbox</type>
</CustomField>