objects/Resource__c/fields/MA_Millbury_WWTP__c.field-meta.xml
<CustomField>
    <fullName>MA_Millbury_WWTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MA-Millbury WWTP</label>
    <type>Checkbox</type>
</CustomField>