objects/Resource__c/fields/MA_Upper_Blackstone_WWTP__c.field-meta.xml
<CustomField>
    <fullName>MA_Upper_Blackstone_WWTP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MA Upper Blackstone WWTP</label>
    <type>Checkbox</type>
</CustomField>