objects/Resource__c/fields/Marine_Equip__c.field-meta.xml
<CustomField>
    <fullName>Marine_Equip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marine Equip</label>
    <type>Checkbox</type>
</CustomField>