objects/Resource__c/fields/Material_Type_Category__c.field-meta.xml
<CustomField>
    <fullName>Material_Type_Category__c</fullName>
    <label>Material Type Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Absorbent Materials</fullName>
            </value>
            <value>
                <fullName>Degreasers &amp; Neutralizing Agents</fullName>
            </value>
            <value>
                <fullName>DOT Shipping Containers</fullName>
            </value>
            <value>
                <fullName>Hand Tool/Construction Accessories</fullName>
            </value>
            <value>
                <fullName>Health &amp; Safety</fullName>
            </value>
            <value>
                <fullName>Hoses/Pipe</fullName>
            </value>
            <value>
                <fullName>Marine Equipment</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Sampling And Lab Supplies</fullName>
            </value>
            <value>
                <fullName>Specialty Equipment</fullName>
            </value>
            <value>
                <fullName>Absorbent</fullName>
            </value>
            <value>
                <fullName>Absorbent Boom</fullName>
            </value>
            <value>
                <fullName>Air Bottles</fullName>
            </value>
            <value>
                <fullName>Bio Haz</fullName>
            </value>
            <value>
                <fullName>Bio Haz Liner</fullName>
            </value>
            <value>
                <fullName>Blaster Materials</fullName>
            </value>
            <value>
                <fullName>CUYD Box</fullName>
            </value>
            <value>
                <fullName>Degreaser/Disinfectant</fullName>
            </value>
            <value>
                <fullName>Draeger Materials</fullName>
            </value>
            <value>
                <fullName>Drum Accessories</fullName>
            </value>
            <value>
                <fullName>Dry Ice</fullName>
            </value>
            <value>
                <fullName>Dump Trailer Liner</fullName>
            </value>
            <value>
                <fullName>Dump Truck Tarp</fullName>
            </value>
            <value>
                <fullName>FBIN Liner</fullName>
            </value>
            <value>
                <fullName>Field Testing Materials</fullName>
            </value>
            <value>
                <fullName>Fill</fullName>
            </value>
            <value>
                <fullName>Filter Liner</fullName>
            </value>
            <value>
                <fullName>Filter Media</fullName>
            </value>
            <value>
                <fullName>Filtration Media</fullName>
            </value>
            <value>
                <fullName>Hand Tools</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>