objects/Resource__c/fields/MD_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>MD_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MD HW Permit</label>
    <type>Checkbox</type>
</CustomField>