objects/Resource__c/fields/MD_Oil_Transporter__c.field-meta.xml
<CustomField>
    <fullName>MD_Oil_Transporter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MD Oil Transporter</label>
    <type>Checkbox</type>
</CustomField>