objects/Resource__c/fields/MD_Tire_Permit__c.field-meta.xml
<CustomField>
    <fullName>MD_Tire_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MD Tire Permit</label>
    <type>Checkbox</type>
</CustomField>