objects/Resource__c/fields/ME_HW_Permit__c.field-meta.xml
<CustomField>
    <fullName>ME_HW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ME HW Permit</label>
    <type>Checkbox</type>
</CustomField>