objects/Resource__c/fields/ME_SW_Decal__c.field-meta.xml
<CustomField>
    <fullName>ME_SW_Decal__c</fullName>
    <label>ME SW Permit</label>
    <length>10</length>
    <type>Text</type>
</CustomField>