objects/Resource__c/fields/ME_SW_Permit__c.field-meta.xml
<CustomField>
    <fullName>ME_SW_Permit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ME SW Permit (Obsolete)</label>
    <type>Checkbox</type>
</CustomField>