objects/Resource__c/fields/Medical__c.field-meta.xml
<CustomField>
    <fullName>Medical__c</fullName>
    <inlineHelpText>ACV portion of premium paid for employee health insurance coverage (Medical, Dental and/or Vision)</inlineHelpText>
    <label>Medical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>