objects/Resource__c/fields/MI_Nonhaz_Liquid__c.field-meta.xml
<CustomField>
    <fullName>MI_Nonhaz_Liquid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MI Nonhaz Liquid</label>
    <type>Checkbox</type>
</CustomField>